Phát triển hệ thống đấu giá Client-Server bằng Java Socket. Áp dụng Design Patterns và xử lý đa luồng an toàn Giao diện JavaFX cập nhật giá real-time.